# Game_RPG_CoverOfTheNight

./: .gitignore  CMakeLists.txt  Creature.cpp  Creature.h  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  Hero.cpp  Hero.h  MovableObject.cpp  MovableObject.h  README.md  main.cpp  model.cpp  model.h  resources.qrc
Json/: enemy.json  enemyType.json  obj.json
includes/: Controller.h  GameWindow.h  InventoryManager.h  model.h
includes/Graphics/: AnimationManager.h  HpBar.h  PlayerInterface.h  XpBar.h
includes/Objects/: Creature.h  Enemy.h  GameObject.h  Hero.h  Item.h  MovableObject.h  Projectile.h  Weapon.h
sources/: Controller.cpp  GameWindow.cpp  main.cpp  model.cpp
sources/Graphics/: AnimationManager.cpp  HpBar.cpp  PlayerInterface.cpp  XpBar.cpp
sources/Objects/: Creature.cpp  Enemy.cpp  GameObject.cpp  Hero.cpp  Item.cpp  MovableObject.cpp  Projectile.cpp  Weapon.cpp
